# catspeak-compiler

./: .gitignore  Cargo.toml  README.md
src/: catspeak.pest  cli.rs  ir.rs  main.rs  parser.rs
testfiles/: functions.txt  insanity.txt
