[package]
name = "catspeak-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6.2"
log = { version = "0.4.20", features = ["std"] }
pest = { version = "2.7.3", features = ["pretty-print"] }
pest_derive = "2.7.3"
serde = { version = "1.0.188", features = ["alloc", "derive"] }
serde_json = "1.0.107"
